# openhipify

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
docs/auxiliary-functions/: README.md
includes/: HIPDefs.h  KernelTracking.h  OpenClDefs.h  OpenHipifyFA.h  OpenHipifyFAFactory.h  OpenHipifyHostFA.h  OpenHipifyHostFAFactory.h  OpenHipifyKernelFA.h  OpenHipifyKernelFAFactory.h
includes/args/: Arguments.h
includes/defs/: HIPDefs.h  OpenCLDefs.h
includes/utils/: Defs.h  PathUtils.h
src/: Arguments.cpp  CMakeLists.txt  KernelTracking.cpp  OpenHipifyFA.cpp  OpenHipifyHostFA.cpp  OpenHipifyKernelFA.cpp  main.cpp
src/args/: Arguments.cpp
src/defs/: HIPDefs.cpp  OpenCLDefs.cpp  OpenhipifyDefs.cpp
src/reporting/: Defs.cpp
src/utils/: Defs.cpp  PathUtils.cpp
